Update main.yml with msbuild

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: microsoft/setup-msbuild@v2
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -26,6 +27,7 @@ jobs:
       contents: read
       packages: write
     steps:
+      - uses: microsoft/setup-msbuild@v2
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
