--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "braintree-web-drop-in",
   "version": "1.44.0",
   "main": "src/index.js",
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "gulp build",
     "development": "gulp development",
