--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "braintree-web-drop-in",
+  "name": "@govxinc/braintree-web-drop-in",
   "version": "1.44.0",
   "main": "src/index.js",
   "private": false,
